--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+THIS PROJECT IS DEPRECATED.
+I'm currently working on a busterjs-like app for continuous integration.
+I'm leaving cinodine as research project, because it was one of my first releases :)
+STAY TUNED!
+
 Continuous integration for Javascript
 ======================================
 
